# metal-ray-tracing-rs

./: .gitignore  Cargo.toml  LICENSE  cornellbox.mtl
metal_lib/: Cargo.toml
metal_lib/src/: lib.rs  ray_tracing.rs  rayintersector.rs
src/: blit.metal  intersector.rs  main.rs  raytracer.rs  shaders.metal  test.metal  tracing.metal
