[package]
name = "metal-ray-tracing-rs"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asger.nyman@alexandra.dk>"]
edition = "2018"

[dependencies]
cocoa = "0.18"
objc = "0.2.5"
winit = "0.17"
tobj = "0.1.6"
rand = "0.4.3"
mersenne_twister = "1.1.1"
cgmath = "0.16.1"
metal = { path = "metal_lib/" }